# cpp-masters-tasks

./: LICENSE  README.md
cow-string/: CMakeLists.txt
cram/: CMakeLists.txt  README.md
cram/driver/: driver.cpp
cram/frontend/: CMakeLists.txt
cram/frontend/lexer/: lexer.l
cram/include/backend/: backend.hpp
cram/include/common/: n_ary_tree.hpp
cram/include/frontend/ast/: ast.hpp
cram/include/frontend/parser/: parser.hpp
cram/tests/: 001.cram  006.cram  007.cram
hw1/cow-string/: main.cc
hw1/cow-string/include/: CMakeLists.txt
hw1/cow-string/include/CowString/: CowString.h
hw1/testqual/: main.cc  parser.h
hw2/cram/: .clang-format  README.md  conanfile.py
hw2/cram/driver/: driver.cpp
hw2/cram/frontend/: frontend.cpp
hw2/cram/frontend/parser/: grammar.y
hw2/cram/include/backend/: backend.hpp
hw2/cram/include/common/: n_ary_tree.hpp
hw2/cram/include/frontend/: frontend.hpp
hw2/cram/include/frontend/ast/: ast.hpp
hw2/cram/include/frontend/lexer/: lexer.hpp
hw2/cram/include/frontend/parser/: parser.hpp
hw2/cram/tests/: 003.cram  004.cram  005.cram
hw2/task_1/: README.md
hw2/task_2/: README.md
hw3/task_1/: README.md
hw3/task_2/: README.md
hw4/task_1/: README.md
hw4/task_2/: README.md
testqual/: CMakeLists.txt  grammar.y  lexer.h  lexer.l
